--- a/6GiffExpertApp/gif-expert-app/package.json
+++ b/6GiffExpertApp/gif-expert-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intro-javascript",
+  "name": "gif-expert-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -30,10 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2"
   }
 }
